# tabai

./: Dockerfile  README_ja.md  docker-compose.yml  pyproject.toml
src/tabai/: core.py
tabai/src/tabai_gpu/: __init__.py  core.py  tabai_int.py  utils.py
tabai/tests/: test_operations.py  test_tabai_int.py
tests/: test_operations.py  test_tabai_int.py
